# NeoS3Files

./: .gitignore  MANIFEST.in  README.md  README_ENG.md  docs.html  pyproject.toml  requirements-test.txt  requirements.txt
neos3files/: __init__.py  client.py  exceptions.py  manager.py  models.py  utils.py
tests/: __init__.py  conftest.py  test_client.py  test_exceptions.py  test_manager.py  test_models.py  test_utils.py
tests/integration/: test_s3_real.py
tests/mocks/: aioboto3_mock.py
